--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
       "@/*": ["./*"],
       "~~/*": ["./*"],
       "@@/*": ["./*"]
-    }
+    },
+    "experimentalDecorators":true
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
