--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@mdi/font": "^6.9.96",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-proposal-decorators": "^7.18.2",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
@@ -39,6 +42,6 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.1.1"
+    "eslint-plugin-vue": "^8.2.0"
   }
 }
