--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
-    "google-maps-api-loader": "^1.1.1",
     "nuxt": "^2.15.8",
+    "nuxt-gmaps": "^1.2.10",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
