--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mdi/font": "^6.9.96",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
