--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.14",
+    "vue-pug": "^1.0.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
