--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toast-notification": "^0.6.3",
     "vuetify": "^2.6.1",
     "vuex": "^3.1.1",
     "webpack": "^4.46.0"
