--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@mdi/font": "^6.9.96",
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "cookieparser": "^0.1.0",
