--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,8 +6,10 @@
       "@/*": ["./*"],
       "~~/*": ["./*"],
       "@@/*": ["./*"]
-    },
-    "experimentalDecorators" : true
+    },     
+    "types": [
+      "@nuxtjs/auth-next",
+    ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
