--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "-": "^0.0.1",
     "@mdi/font": "^6.9.96",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
@@ -34,6 +34,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-socket.io": "^3.0.10",
     "vue-template-compiler": "^2.6.14",
+    "vue-the-mask": "^0.11.1",
     "vue-toast-notification": "^0.6.3",
     "vuetify": "^2.6.1",
     "vuex": "^3.1.1",
